--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js";
     import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-analytics.js";
+    import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-database.js";
     // TODO: Add SDKs for Firebase products that you want to use
     // https://firebase.google.com/docs/web/setup#available-libraries
 
@@ -23,19 +24,33 @@
         storageBucket: "karing-a8b53.appspot.com",
         messagingSenderId: "284699594166",
         appId: "1:284699594166:web:fcaaf6bdad63e5b6478517",
-        measurementId: "G-RJVQ3K3R44"
+        measurementId: "G-RJVQ3K3R44",
+        databaseURL: "https://karing-a8b53-default-rtdb.asia-southeast1.firebasedatabase.app/",
     };
 
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const analytics = getAnalytics(app);
-    </script>
 
+    const db = getDatabase();
+       const titleRef = ref(db, 'pt/01');
+       onValue(titleRef, (snapshot) => {
+         const data = snapshot.val();
+         console.log(data);
+         
+       });
+      $("#name").text(pt.name)
+      $("#dob").text(pt.dob)
+      $("#sex").text(pt.sex)
+    </script>
 
 </head>
 <body>
-    
-asdadads
 
+  asdads
+  <h1 id="name"></h1>
+  <h2 id ="dob"></h2>
+  <p id="sex"></p>
+  <script src="https://code.jquery.com/jquery-3.6.3.slim.min.js" integrity="sha256-ZwqZIVdD3iXNyGHbSYdsmWP//UBokj2FHAxKuSBKDSo=" crossorigin="anonymous"></script>
 </body>
 </html>
