--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,21 @@
 
     <!-- API -->
     <script type="module">
+      var getUrlParameter = function getUrlParameter(sParam) {
+   var sPageURL = window.location.search.substring(1),
+       sURLVariables = sPageURL.split('&'),
+       sParameterName,
+       i;
+
+   for (i = 0; i < sURLVariables.length; i++) {
+       sParameterName = sURLVariables[i].split('=');
+
+       if (sParameterName[0] === sParam) {
+           return sParameterName[1] === undefined ? true : decodeURIComponent(sParameterName[1]);
+       }
+   }
+   return false;
+};
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js";
     import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-analytics.js";
@@ -17,6 +32,21 @@
 
     // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var getUrlParameter = function getUrlParameter(sParam) {
+    var sPageURL = window.location.search.substring(1),
+       sURLVariables = sPageURL.split('&'),
+       sParameterName,
+       i;
+
+   for (i = 0; i < sURLVariables.length; i++) {
+       sParameterName = sURLVariables[i].split('=');
+
+       if (sParameterName[0] === sParam) {
+           return sParameterName[1] === undefined ? true : decodeURIComponent(sParameterName[1]);
+       }
+   }
+   return false;
+};
     const firebaseConfig = {
         apiKey: "AIzaSyC4mFlIik7OqrJlOsHvrZyito-WhF4tPtk",
         authDomain: "karing-a8b53.firebaseapp.com",
@@ -34,24 +64,42 @@
 
     const db = getDatabase();
     const aricleRef = ref(db, 'dt');
-    
+
     onValue(aricleRef, (snapshot) => {
     const articles = snapshot.val();
     for (var article in articles) {
       $("#article").append("<a href='dt.html?id="+article+"'>" + articles[article].name + "<br>" + articles[article].dob + "<a>")
+      if(articles[article].ava){
+          $("#article").append("<br><img src = '"+articles[article].ava+"'>")
+      }
+
       $("#article").append("<hr>")
     }
     $("#loading").hide()
     });
 
-      $("#name").text(pt.name)
-      $("#dob").text(pt.dob)
-      $("#sex").text(pt.sex)
+    let id = getUrlParameter("id")
+   const aricleRef2 = ref(db, 'db/'+id);
+   onValue(aricleRef2, (snapshot) => {
+     const article = snapshot.val();
+      $("#article").append(article.name + "<br>" + article.dob+ "<br>" + article.sex)
+       if(article.ava){
+           $("#article").append("<br><img src = '"+article.ava+"'>")
+       }
+
+     $("#loading").hide()
+   });
+
+
+
+      // $("#name").text(dt.name)
+      // $("#dob").text(pt.dob)
+      // $("#sex").text(pt.sex)
     </script>
 
 </head>
 <body>
-  
+  <h1>Thong tin chi tiet</h1>
  <div id="loading">Loading...</div>
  <div id="article"></div>
 
