--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,11 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css">
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <!-- <h1>Thong tin chi tiet</h1>
  <div id="loading">Loading...</div>
- <div id="article"></div> -->
+ <!-- <div id="article"></div> -->
  <!-- Navigation bar -->
  <nav class="navbar navbar-expand-sm navbar-light">
   <div class="container">
@@ -125,13 +123,12 @@
       <div class="container">
           <div class="card">
               <div class="row no-gutters">
-                  <div class="col-sm-3">
-                      <!-- <img class="card-img rounded-circle" src="/image/patient1.jpg" alt="shiina"> -->
+                  <!-- <div class="col-sm-3">
+                      <img class="card-img rounded-circle" src="/public/image/patient1.jpg" alt="shiina"> -->
                   </div>
                   <div class="col-sm-9">
                       <div class="card-body">
-                          <h5 class="card-title">Suresh Dasari</h5>
-                          <p class="card-text">Suresh Dasari is a founder and technical lead developer in tutlane.</p>
+                          <div id = "article"></div>
                           <a href="#" class="btn btn-primary">View Profile</a>
                       </div>
                   </div>
@@ -142,7 +139,7 @@
 
 </div>
 
-  <script src="/js/main.js" type="module" ></script>
+  <script src="/public/js/main.js" type="module" ></script>
 
   <script src="https://code.jquery.com/jquery-3.6.3.slim.min.js" integrity="sha256-ZwqZIVdD3iXNyGHbSYdsmWP//UBokj2FHAxKuSBKDSo=" crossorigin="anonymous"></script>
 </body>
