--- a/public/html/index.html
+++ b/public/html/index.html
@@ -24,27 +24,27 @@
                 
                 <ul>
                     <li>
-                        <a href="./html/index.html" class="orange">Trang Chủ</a>
+                        <a href="index.html" class="orange">Trang Chủ</a>
                     </li>
                     
                     <li>
-                        <a href="./html/patient.html">Tìm Bệnh Nhân</a>
+                        <a href="patient.html">Tìm Bệnh Nhân</a>
                     </li>
 
                     <li>
-                        <a href="./html/care.html">Tìm Người Chăm Sóc</a>
+                        <a href="care.html">Tìm Người Chăm Sóc</a>
                     </li>
 
                     <li>
-                        <a href="./html/news.html">Tin Tức</a>
+                        <a href="news.html">Tin Tức</a>
                     </li>
 
                     <li>
-                        <a href="./html/contact.html">Liên Hệ</a>
+                        <a href="contact.html">Liên Hệ</a>
                     </li>
 
                     <li>
-                        <a href="./html/login.html" class="btn dark">Đăng Nhập</a>
+                        <a href="login.html" class="btn dark">Đăng Nhập</a>
                     </li>
                 </ul>
                 <!-- <ul class="navbar-nav me-auto mt-2 mt-lg-0">
