--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -12,7 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Raleway:wght@300;800&display=swap"
         rel="stylesheet"
     >
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
