--- a/public/html/patient.html
+++ b/public/html/patient.html
@@ -12,7 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Raleway:wght@300;800&display=swap"
         rel="stylesheet"
     >
-    <link rel="stylesheet" href="/public/css/patient.css">
+    <link rel="stylesheet" href="../css/patient.css">
     <script src="/public/js/bootstrap.min.js"></script>
     <!-- <link href="/public/css/bootstrap.min.css" rel="stylesheet"> -->
 </head>
