--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
 
                     <p>Nhanh chóng - Thân thiện - Tin cậy</p>
 
-                    <a href="news.html" class="btn light">
+                    <a href="./news.html" class="btn light">
                         Những thông tin quan trọng về đột quỵ
                     </a>
                 </div>
