--- a/public/news.html
+++ b/public/news.html
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-
     <header>
         <div class="wrapper">
             <nav>
@@ -155,7 +154,12 @@
                     <button class="submit-btn">Tìm kiếm</button>
                 </form>
             </div>
-            
+            <div id = "loading">
+                <h3>
+                    Loading...
+                </h3>
+                <img src="image/loading.jpg" style="height: 250px;" alt="">
+            </div>
             <!-- <div class="articles">
                 <div class="article">
                     <div class="inf">
