--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trang chủ</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link 
@@ -270,7 +270,7 @@
         <div class="wrapper">
             <div class="ups">
                 <h1 class="blue">Tin Tức</h1>
-                <a href="#"><h2>Tất cả...</h2></a>
+                <a href="news.html"><h2>Tất cả...</h2></a>
             </div>
             
             <div class="articles">
@@ -326,7 +326,7 @@
         <div class="wrapper">
             <div class="ups">
                 <h1 class="blue">Người Bệnh</h1>
-                <a href="#"><h2 class="black">Tất cả...</h2></a>
+                <a href="patient.html"><h2 class="black">Tất cả...</h2></a>
             </div>
 
             <div class="patients">
@@ -394,7 +394,7 @@
         <div class="wrapper">
             <div class="ups">
                 <h1 class="blue">Người Chăm Sóc</h1>
-                <a href="#"><h2 class="black">Tất cả...</h2></a>
+                <a href="care.html"><h2 class="black">Tất cả...</h2></a>
             </div>
 
             <div class="cares">
