--- a/public/article.html
+++ b/public/article.html
@@ -20,7 +20,7 @@
     <header>
         <div class="wrapper">
             <nav>
-                <a href="index.html"><div class="logo">Chăm Sóc Đột Quỵ - Karing.</div></a>
+                <a href="index.html"><div class="logo">Karing</div></a>
                 
                 <ul>
                     <li>
